Use gretty to run integration test and update GeoServer